# softbody

./: CMakeLists.txt  README.md
src/: main.cpp  massPoint.cpp  massPoint.h  obstacle.cpp  obstacle.h  softbody.cpp  softbody.h
